# test_task__jubilant-fishstick

./: .gitignore  Makefile  admin.py  app.py  forms.py  hello.py  login.py  main.py  models.py  pyproject.toml  views.py
templates/: dashboard_view.html
