[project]
name = "standart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "python-dotenv>=1.0.1",
]
